apps/frontend/lingua-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lingua-app
  namespace: lingua-app
  labels:
    app: lingua-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: lingua-app
